force-app/main/default/objects/Car__c/fields/Car_Brading__c.field-meta.xml
<CustomField>
    <fullName>Car_Brading__c</fullName>
    <label>Car Brading</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cars_Brand</valueSetName>
    </valueSet>
</CustomField>