force-app/main/default/objects/Car__c/fields/Motor_Type__c.field-meta.xml
<CustomField>
    <fullName>Motor_Type__c</fullName>
    <label>Motor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gasoil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>