force-app/main/default/objects/Car__c/fields/Release_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Year__c</fullName>
    <description>Car Release Year</description>
    <inlineHelpText>Enter release year</inlineHelpText>
    <label>Release Year</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>